<resources>
    <string name="app_name">SAR Coordinator</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="Stop">Stop</string>
    <string name="stop">Stop</string>
    <string name="Start">Start</string>
    <string name="loc_notification_title">Tracking location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="testing_mode">Testing Mode</string>
    <string name="county_vehicle">County Vehicle</string>
    <string name="personal_vehicle">Personal Vehicle</string>
    <string name="miles_traveled">Miles Traveled</string>
    <string name="hours_on_search">Hours on Search</string>
    <string name="vehicle">Vehicle</string>
    <string name="personal">Personal</string>
    <string name="end_shift">End Shift</string>
    <string-array name="theme_array">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string-array name="vehicle_array">
        <item>4WD</item>
        <item>ATV</item>
        <item>Auto</item>
        <item>Boat</item>
        <item>Motorcycle</item>
        <item>PWC</item>
        <item>Snowmobile</item>
        <item>Trailer</item>
        <item>Dogs</item>
        <item>Horses</item>
        <item>Helicopter</item>
        <item>Fixed Wing</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_tracking_desc">Click on the button in the bottom to start tracking</string>
    <string name="starting_location_service">Starting Location Service</string>
    <string name="started_shift">Started Shift</string>
    <string name="case_info">Case Information</string>
    <string name="case_id">Case Id</string>
    <string name="reporter_name">Reporter Name</string>
    <string name="missing_person">Missing Person</string>
    <string name="missing_people">Missing People</string>
    <string name="equipment_used">Equipment Used</string>
    <string name="try_again_for_network">Try again for network</string>
    <string name="about">About</string>
    <string name="app_version">App Version:</string>
    <string name="license">License</string>
    <string name="licenses">Licenses</string>
    <string name="view_licenses">View Licenses</string>
    <string name="tracking_information">Tracking Information</string>
    <string name="no_network_desc">No network connectivity, click on the button to try again</string>
    <string name="waiting_for_server">Waiting for server</string>
    <string name="submit_later">No internet connection found. Submit later?</string>
    <string name="yes">Yes</string>
    <string name="error_starting">Error starting shift. Check network connection</string>
    <string name="error_try_again">Error, try again</string>
    <string name="shift_information">Shift Information</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="failed_shifts">Failed Shifts</string>
    <string name="sync_failure_desc">Shifts will appear here if they fail to sync</string>
    <string name="shift_report">Shift Report</string>
    <string name="image_information">Image Information</string>
    <string name="number_of_images_taken">Number of images taken</string>
    <string name="images">Images</string>
    <string name="images_taken">Images Taken</string>
    <string name="Metadata">Metadata</string>
    <string name="upload_image">Upload Image</string>
    <string name="click_to_edit_metadata">Click to edit metadata</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this image?</string>
    <string name="delete_image">Delete Image</string>
    <string name="no">No</string>
    <string name="cached_time">Cached Time</string>
    <string name="search_duration">Search Duration</string>
    <string name="sync_shift">Sync Shift</string>
    <string name="debug_settings">Debug Settings</string>
    <string name="low_bandwidth_mode">Low Bandwidth Mode</string>
    <string name="Low_Bandwidth_Mode">Low Bandwidth Mode</string>
    <string name="Map_Disabled">Map Disabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="enable_gps_prompt">GPS is required to start shift</string>
    <string name="back">Back</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="map">Map</string>
    <string name="light">Light</string>
    <string name="standard">Standard</string>
    <string name="snow">Snow</string>
    <string name="dark">Dark</string>
    <string name="night">Night</string>
    <string name="map_theme">Map Theme</string>
    <string name="privacy_policy_disclaimer">By continuing you agree to our <a href="https://sar-coordinator.flycricket.io/privacy.html">privacy policy</a></string>
    <string name="privacy_policy"><a href="https://sar-coordinator.flycricket.io/privacy.html">Privacy Policy</a></string>
    <string name="vehicles">Vehicles</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="no_shifts_to_sync">No shifts to sync</string>
    <string name="low_bandwidth_desc">Disable \'Low bandwidth mode\' in settings to re-enable maps</string>
    <string name="no_images_taken">No images taken</string>
    <string name="no_images_desc">Take an image to see it here</string>
    <string name="no_images_found">No Images Found</string>
    <string name="no_image_report_desc">Either all images were synced, or none we taken</string>
    <string name="no_cases_desc">Ask the county sheriff to assign you to a case</string>
    <string name="no_cases">No cases assigned</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">next</string>
    <string name="welcome">Welcome</string>
    <string name="login">login</string>
    <string name="reset">reset</string>
    <string name="reset_password_desc">Enter your email associated with an account.\nWe will email you a link to reset your password</string>
    <string name="hey_youre_offline">Hey, you\'re offline!</string>
    <string name="offline_desc1">But don’t worry, you can still start a shift!</string>
    <string name="just_start_tracking_desc">Just click on the button in the bottom to get started</string>
    <string name="take_images_desc">Images will appear here once you take them</string>
</resources>
