<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.CardView.Standard.RoundedTop"
    app:behavior_hideable="false"
    app:behavior_peekHeight="100dp"
    android:clickable="true"
    app:cardElevation="5dp"
    app:rippleColor="@android:color/transparent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/slide_indicator"
            android:layout_width="50dp"
            android:layout_height="3dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/images_title"
            style="@style/Base.Widget.AppCompat.TextView.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/images"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slide_indicator" />

        <com.sarcoordinator.sarsolutions.custom_views.LargeInfoView
            android:id="@+id/no_images_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:Heading="@string/no_images_found"
            app:Icon="@drawable/ic_baseline_photo_library_24"
            app:Message="@string/no_image_report_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/images_title" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/images_title"
            tools:itemCount="1"
            tools:listitem="@layout/image_list_view_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>