<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView.Standard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_optimizationLevel="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_title_text_view"
            style="@style/Base.Widget.AppCompat.TextView.SubHeading.Color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Vehicle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/county_vehicle_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/county_vehicle"
            app:layout_constraintEnd_toStartOf="@+id/personal_vehicle_check_box"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_title_text_view" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/personal_vehicle_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/personal_vehicle"
            app:layout_constraintBottom_toBottomOf="@+id/county_vehicle_check_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/county_vehicle_check_box"
            app:layout_constraintTop_toTopOf="@+id/county_vehicle_check_box" />

        <Spinner
            android:id="@+id/vehicle_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/personal_vehicle_check_box"
            app:layout_constraintStart_toStartOf="@+id/county_vehicle_check_box"
            app:layout_constraintTop_toBottomOf="@+id/county_vehicle_check_box" />

        <EditText
            android:id="@+id/miles_traveled_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/miles_traveled"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/personal_vehicle_check_box"
            app:layout_constraintStart_toStartOf="@+id/county_vehicle_check_box"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_type_spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>